hphp/hack/test/typecheck/tconst/unsupported_this1.php
<?hh // strict

abstract class C<T as this::X> {
  abstract const type X;
}
